feat: thumbnail navigation, navigation with keyboard

--- a/index.html
+++ b/index.html
@@ -27,6 +27,27 @@
                 src="https://via.placeholder.com/800x800/32cd32/FFFFFF/?text=Awesomesite.net"
               />
             </div>
+
+            <div class="image-item">
+              <img
+                src="https://via.placeholder.com/800x800/9370db/FFFFFF/?text=IPaddress.net"
+              />
+            </div>
+            <div class="image-item">
+              <img
+                src="https://via.placeholder.com/800x800/ff4500/FFFFFF/?text=SomeSite.com"
+              />
+            </div>
+            <div class="image-item">
+              <img
+                src="https://via.placeholder.com/800x800/808080/FFFFFF/?text=Awesomesite.net"
+              />
+            </div>
+            <div class="image-item">
+              <img
+                src="https://via.placeholder.com/800x800/ffff00/FFFFFF/?text=Awesomesite.net"
+              />
+            </div>
           </div>
           <div class="thumbnail-reel"></div>
         </div>
