feat: resize event and keypress new keycodes

--- a/index.html
+++ b/index.html
@@ -50,10 +50,14 @@
             </div>
           </div>
           <div class="thumbnail-reel"></div>
-        </div>
 
-        <button data-navigation-carousel="prev" class="nav-btn">Prev</button>
-        <button data-navigation-carousel="next" class="nav-btn">Next</button>
+          <button data-navigation-carousel="prev" class="nav-btn nav-btn-left">
+            Prev
+          </button>
+          <button data-navigation-carousel="next" class="nav-btn nav-btn-right">
+            Next
+          </button>
+        </div>
       </div>
     </div>
 
